rust/crates/stencila/src/methods/decode/snapshots/html_fragments@code-block.html.snap
---
source: rust/src/methods/decode/html.rs
expression: "decode_fragment(&content, Options::default())"
input_file: fixtures/fragments/html/code-block.html

---
[
  {
    "type": "CodeBlock",
    "text": "Code with no language"
  },
  {
    "type": "CodeBlock",
    "text": "# Some Python code\n1 + 1\n",
    "programmingLanguage": "python"
  }
]
