rust/crates/stencila/src/methods/decode/snapshots/html_fragments@thematic-break.html.snap
---
source: rust/src/methods/decode/html.rs
expression: "decode_fragment(&content, Options::default())"
input_file: fixtures/fragments/html/thematic-break.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "First theme."
    ]
  },
  {
    "type": "ThematicBreak"
  },
  {
    "type": "Paragraph",
    "content": [
      "Second theme."
    ]
  },
  {
    "type": "ThematicBreak"
  },
  {
    "type": "Paragraph",
    "content": [
      "Third theme."
    ]
  }
]
