rust/crates/stencila/src/methods/decode/snapshots/pandoc_fragments@cite.json.snap
---
source: rust/src/methods/decode/pandoc.rs
expression: json
input_file: fixtures/fragments/pandoc/cite.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "Narrative (in text) citations like ",
      {
        "type": "Cite",
        "target": "smith",
        "citationMode": "Narrative"
      },
      ", ",
      {
        "type": "Cite",
        "target": "jones",
        "citationMode": "Narrative"
      },
      ", and ",
      {
        "type": "Cite",
        "target": "singh",
        "citationMode": "Narrative"
      },
      "."
    ]
  }
]
