rust/crates/stencila/src/methods/decode/snapshots/pandoc_fragments@delete.json.snap
---
source: rust/src/methods/decode/pandoc.rs
expression: json
input_file: fixtures/fragments/pandoc/delete.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Delete",
        "content": [
          "deleted"
        ]
      },
      " text."
    ]
  }
]
