rust/crates/stencila/src/methods/decode/snapshots/pandoc_fragments@image.json.snap
---
source: rust/src/methods/decode/pandoc.rs
expression: json
input_file: fixtures/fragments/pandoc/image.json

---
[
  {
    "type": "Paragraph",
    "content": [
      "An image ",
      {
        "type": "ImageObject",
        "contentUrl": "image.png"
      },
      "."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "An image with a title ",
      {
        "type": "ImageObject",
        "contentUrl": "image.png",
        "title": "the title"
      },
      "."
    ]
  }
]
