rust/crates/stencila/src/methods/decode/snapshots/pandoc_fragments@list.json.snap
---
source: rust/src/methods/decode/pandoc.rs
expression: json
input_file: fixtures/fragments/pandoc/list.json

---
[
  {
    "type": "List",
    "items": [
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "apple"
            ]
          }
        ]
      },
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "pear"
            ]
          }
        ]
      },
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "orange"
            ]
          }
        ]
      }
    ],
    "order": "Unordered"
  },
  {
    "type": "List",
    "items": [
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "first"
            ]
          }
        ]
      },
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "second"
            ]
          }
        ]
      },
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "third"
            ]
          }
        ]
      }
    ],
    "order": "Ascending"
  },
  {
    "type": "List",
    "items": [
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "nested"
            ]
          },
          {
            "type": "List",
            "items": [
              {
                "type": "ListItem",
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      "2a"
                    ]
                  },
                  {
                    "type": "List",
                    "items": [
                      {
                        "type": "ListItem",
                        "content": [
                          {
                            "type": "Paragraph",
                            "content": [
                              "3a"
                            ]
                          }
                        ]
                      }
                    ],
                    "order": "Unordered"
                  }
                ]
              },
              {
                "type": "ListItem",
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      "2b"
                    ]
                  }
                ]
              },
              {
                "type": "ListItem",
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      "2c"
                    ]
                  },
                  {
                    "type": "List",
                    "items": [
                      {
                        "type": "ListItem",
                        "content": [
                          {
                            "type": "Paragraph",
                            "content": [
                              "3b"
                            ]
                          },
                          {
                            "type": "List",
                            "items": [
                              {
                                "type": "ListItem",
                                "content": [
                                  {
                                    "type": "Paragraph",
                                    "content": [
                                      "4a"
                                    ]
                                  }
                                ]
                              }
                            ],
                            "order": "Unordered"
                          }
                        ]
                      }
                    ],
                    "order": "Unordered"
                  }
                ]
              }
            ],
            "order": "Unordered"
          }
        ]
      }
    ],
    "order": "Unordered"
  }
]
